@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class HRM {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Job {
    title
    description
}

class Collaborator {
    Name
    Date of birth
    Admission date
    Adress
    Phone number
    E-mail adress
    Identification document
    Number of identification document
}

class Assigment {
    collaboratorID
    jobID
}



' Relationships
HRM "1" -- "*" Collaborator : registers with >
HRM "*" -- "*" Assignment : assigns to >
@enduml